# wire-check

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  doc-drift.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/decisions/: 0001-initial-architecture.md
docs/modules/: cargo.md  config.md  git.md  layers.md  report.md
src/: cargo.rs  config.rs  git.rs  layers.rs  main.rs  report.rs
wiki/: index.md  log.md
wiki/concepts/: dead-code-ratchet.md  development-methodology.md  error-handling.md  external-command-isolation.md  four-layers.md  orchestrator-pattern.md  test-path-filtering.md  text-pattern-matching.md  zero-config-defaults.md
wiki/entities/: brandon.md  clap.md  doc-drift.md  eslint-seatbelt.md  github-actions.md  serde.md  thiserror.md
wiki/summaries/: architecture-md.md  cargo-rs.md  cargo-toml.md  changelog.md  ci-yml.md  clippy-toml.md  config-rs.md  doc-drift-toml.md  fix-cross-reference-bare-paths.md  fix-review-findings.md  git-rs.md  layers-rs.md  main-rs.md  methodology-md.md  mvp-spec.md  readme.md  report-rs.md
